--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  shared_preferences: ^0.5.12+4
+  image_picker: ^0.6.7+21
+  path_provider: ^1.6.27
+  toast: ^0.1.5
+
+  firebase_core: "0.7.0"
+  firebase_auth: "^0.20.0+1"
+  cloud_firestore: "^0.16.0"
+  firebase_storage: "^7.0.0"
+  firebase_database: "^6.0.0"
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,9 +58,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - res/logos/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
