--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  shared_preferences: ^0.5.12+4
-  image_picker: ^0.6.7+21
-  path_provider: ^1.6.27
-  toast: ^0.1.5
+  shared_preferences: ^2.0.4
+  image_picker: ^0.7.2+1
+  path_provider: ^2.0.1
+  flutter_easyloading: ^3.0.0
 
-  firebase_core: "0.7.0"
-  firebase_auth: "^0.20.0+1"
-  cloud_firestore: "^0.16.0"
-  firebase_storage: "^7.0.0"
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  cloud_firestore: ^1.0.1
+  firebase_storage: ^8.0.0
   firebase_database: "^6.0.0"
 
 
