--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_picker: ^0.7.2+1
   path_provider: ^2.0.1
   flutter_easyloading: ^3.0.0
+  cached_network_image: ^2.5.1
 
   firebase_core: ^1.0.1
   firebase_auth: ^1.0.1
